
=== 2.9 ===
Implemented own plist output format
- it is better than relying on essentially undocumented strings file export behaviour
- it allows us to sort dictionary items, making so files much more diff-friendly

Improved SQL name generator not to dup _'s

Model can have a default package, which is automatically prepended to all suggested class names.

Model can contain a default package name, which is automatically added to all newly created class names.

Also: bumped up minimal version, no need to support really ancient macOSen :)

=== 2.8 ===
- added support for so-far-forgotten valueFactoryClassName
- a couple of small cosmetic improvements, mostly autolayout-side

=== 2.7 ===
- fixed an entity format with fspecs (no fetchSpecificationDictionary)
- also, got rid of the new warnings

=== 2.6 ===
- parent entity stored into index

=== 2.5 ===
- removed all number formatters (attributes width/precision/scale, relationship batch count): they made problems when archived as plist

=== 2.4 === *QUICK AND DIRTY* FS and SharedCTXT support
- fixed sharing EOSharedCTXT FS names: can be edited more or less manually like comma-(or-anything)-separated list; below is a list of available FSs. Not good, but quick :)
- when saving, entities whose EOSharedCTXT FS names list is nonempty are automatically set as "entitiesWithSharedObjects"
- the FS column in entities shows number of shared ones if any
- click on FS column opens the FS editor -- at the moment, archived plaintext, sorry. Better'n'nothing :)

=== 2.3 ===
- implemented copy/paste -- first Q&D attempt, not as smart as should be

=== 2.2 ===
- small fix -- inserting attribs/relationships into entity which did have none now works properly

=== 2.1 ===

- added this History file to keep track of changes and todos
- slightly cleaned up sources, removed some old out-commented nonsense etc, made sure there are no warnings (LLVM 5.1, did not test elsewhere)
- added menu alternatives for toolbar items