@@ -28,8 +28,82 @@
 -(NSString *)windowNibName {
     return @"OCSModel";
 }
+-(void)ocs_revertToCurrentDiskVersionLogType:(const char*)logtype {
+    NSLog(@"... about to %s revert to the disk version (%s)",logtype,self.documentEdited?"EDITED":"unchanged");
+    NSError *error;
+    if ([self revertToContentsOfURL:self.fileURL ofType:@"revert" error:&error]) NSLog(@"... OK");
+    else NSLog(@"... FAILED: %@", error.ocs_localizedErrorDescription);
+}
 -(void)awakeFromNib {
     [super awakeFromNib];
+    NSUserDefaults *def=NSUserDefaults.standardUserDefaults;
+    NSTimeInterval checkTI=[def floatForKey:@"cz.ocs.CheckFilesInterval"];
+    if (checkTI<=0) return;
+    
+    self.originalCheckerTimer=[NSTimer scheduledTimerWithTimeInterval:checkTI repeats:YES block:^(NSTimer * _Nonnull timer) {
+        if (self.originalWrapper && self.fileURL && ![self.originalWrapper matchesContentsOfURL:self.fileURL]) {
+            NSLog(@"WARNING: original wrapper does not match anymore %@!",self.fileURL);
+            NSError *error;
+            NSFileWrapper *nwr=[[NSFileWrapper alloc] initWithURL:self.fileURL options:NSFileWrapperReadingImmediate error:&error];
+            if (nwr) {
+                EOModel *nwm=[EOModel modelFromWrapper:nwr error:&error];
+                if ([nwm.rawContents isEqualToDictionary:self.originalRawContents]) {
+                    NSLog(@"OK: contents is unchanged");
+                    self.originalWrapper=nwr; // changed unimportant details, like whspcs or file change times
+                    [self.fileDiffersAlert.buttons.lastObject/*keep different*/ performClick:self];
+                    return; // conditions below need to be reported
+                } else NSLog(@"OOPS, contents really differs or wrong model!");
+            } else NSLog(@"WARNING: original path is not readable at %@ since %@!",self.fileURL,error.ocs_localizedErrorDescription);
+            if ([def boolForKey:@"cz.ocs.AutoRevertToDiskVersion"] && !self.documentEdited) [self ocs_revertToCurrentDiskVersionLogType:"auto"];
+            else if (!self.fileDiffersAlert) { // unless already shown...
+                NSLog(@"... showing the alert");
+                NSAlert *alert=[[NSAlert alloc] init];
+                alert.messageText=@"Contents changed!";
+                alert.informativeText=@"The contents of the original model on the disk did change; most probably since a new branch was just checked out. Do you want to read in the new data?";
+                if (self.documentEdited) {
+                    alert.informativeText=[NSString stringWithFormat:@"%@\n\nBEWARE, the document contains unsaved changes! Should you choose to „Read in“, they are going to be lost irretrievably!", alert.informativeText];
+                    [alert addButtonWithTitle:@"Stash as ~ and then read in"];
+                }
+                [alert addButtonWithTitle:@"Read in"];
+                [alert addButtonWithTitle:@"Keep different"];
+                NSWindow *over=self.windowControllers[0].window;
+                while (over.attachedSheet) over=over.attachedSheet;
+                [alert beginSheetModalForWindow:over completionHandler:^(NSModalResponse returnCode) {
+                    NSError *error;
+                    if (returnCode==NSAlertFirstButtonReturn) {
+                        if (alert.buttons.count==2) [self ocs_revertToCurrentDiskVersionLogType:"user-decision"];
+                        else/*3 btns -> stash and then revert*/ {
+                            NSFileWrapper *currw=[self.model fileWrapperError:&error];
+                            if (!currw) NSLog(@"ERROR: could not create current data wrapper: %@",error.ocs_localizedErrorDescription);
+                            else {
+                                static NSDateFormatter *df;
+                                static dispatch_once_t onceToken;
+                                dispatch_once(&onceToken, ^{
+                                    df=[[NSDateFormatter alloc] init];
+                                    df.locale=[NSLocale localeWithLocaleIdentifier:@"en_US_POSIX"];
+                                    df.dateFormat=@"yyyy-MM-dd-HHmmss";
+                                });
+                                NSString *nn=[NSString stringWithFormat:@"%@~%@.%@", self.fileURL.lastPathComponent.stringByDeletingPathExtension, [df stringFromDate:NSDate.date], self.fileURL.pathExtension];
+                                NSURL *stash;
+                                while ([stash=[self.fileURL.URLByDeletingLastPathComponent URLByAppendingPathComponent:nn] checkResourceIsReachableAndReturnError:NULL]) nn=[nn stringByAppendingString:@"~"];
+                                NSLog(@"... saving to %@",stash);
+                                if (![currw writeToURL:stash options:0 originalContentsURL:self.fileURL error:&error]) NSLog(@"ERROR: could not write current data to %@",stash);
+                                else [self ocs_revertToCurrentDiskVersionLogType:"having-stashed"];
+                            }
+                        }
+                    } else {
+                        NSLog(@"... keeping different (in future may overwrite disk)");
+#warning Should show the case in validators or something like that, and probably also should warn when saving
+                        // must re-read from disk, this happens later, may differ from nwr meantime
+                        NSFileWrapper *nwr=[[NSFileWrapper alloc] initWithURL:self.fileURL options:NSFileWrapperReadingImmediate error:&error];
+                        if (!nwr) NSLog(@"ERROR: original path is not readable at %@ since %@!",self.fileURL,error.ocs_localizedErrorDescription);
+                        else self.originalWrapper=nwr;
+                    }
+                }];
+                self.fileDiffersAlert=alert;
+            } else NSLog(@"... keeping the alert shown");
+        }
+    }];
 }
 -(void)dealloc {
     [NSNotificationCenter.defaultCenter removeObserver:self]; // added in FileAccess when model created
@@ -147,5 +221,10 @@
 
 -(IBAction)toggleModelInspector:sender { [self.inspectorDrawer toggle:sender]; }
 
++(void)initialize {
+    [NSUserDefaults.standardUserDefaults registerDefaults:@{
+        @"cz.ocs.CheckFilesInterval":@5
+    }];
+}
 @end
 
